Update SecurityConfig.java file